--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -87,7 +87,7 @@ a:visited {
 
 .subtree {
   margin-left: 2em;
-  border-left: 1px solid #744;
+  border-left: 2px solid #744;
 }
 
 /*
@@ -108,6 +108,7 @@ a:visited {
 
 .tooltip.zoomed {
   pointer-events: inherit;
+  overflow: auto;
 }
 
 .tooltip h2, p {
