--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -62,6 +62,14 @@ a:visited {
   margin-top: 50px;
 }
 
+.zoomSelector {
+  background-color: rgba(100,50,50,0.5);
+  text-align: center;
+  font-size: 80%;
+  font-family: monospace;
+  color: #FFF;
+}
+
 /*
  * Tree views
  */
