--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -1,4 +1,12 @@
 
+/*
+ * Copyright © 2012 Mozilla Corporation
+ * 
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this file,
+ * You can obtain one at http://mozilla.org/MPL/2.0/.
+ */
+
 html, body {
   background-color: #2D2A27;
   color: #EEE;
