--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -52,7 +52,7 @@ a:visited {
 
 .graph {
   width: 100%;
-  height: 500px;
+  height: 800px;
 }
 
 .emph {
@@ -169,7 +169,7 @@ a:visited {
   padding: 5px;
 }
 
-.tooltip .closeButton {
+.closeButton {
   color: #CCC;
   position: absolute;
   top: 15px;
