--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -82,6 +82,33 @@ a:visited {
 }
 
 /*
+ * Internal status page
+ */
+
+.statusTable {
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+  border-spacing: 5px;
+  text-align: center;
+}
+
+.statusRow {
+  display: table-row;
+}
+
+.statusCell {
+  padding: 5px;
+  display: table-cell;
+  background-color: rgba(255, 255, 255, 0.02);
+}
+
+.statusRow.title {
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+/*
  * Tree views
  */
 
