--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -10,7 +10,6 @@
 html, body {
   background-color: #2D2A27;
   color: #EEE;
-  text-align: center;
 }
 
 h1 {
@@ -18,6 +17,7 @@ h1 {
   margin: 30px;
   font-size: 4em;
   text-shadow: #000 2px 2px 1px;
+  text-align: center;
 }
 
 h2 {
@@ -52,6 +52,10 @@ a:visited {
 
 a:visited:hover {
   color: #EFE;
+}
+
+.graph-header {
+  text-align: center;
 }
 
 .graph {
