--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -83,6 +83,10 @@ a:visited:hover {
   color: #555;
 }
 
+.tick-release-name {
+  font-weight: bold;
+}
+
 .zoomSelector, #zoomOutButton {
   position: absolute;
   font-size: 80%;
