--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -99,6 +99,7 @@ a:visited:hover {
 }
 
 .zoomSelector, .zoomOutButton,
+.zoomOutButton:link,
 .zoomOutButton:visited,
 .zoomOutButton:active,
 .zoomOutButton:hover,
