--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -267,6 +267,7 @@ a:visited:hover {
 
 .memoryTree {
   margin-top: 5px;
+  margin-bottom: 15px;
   padding: 5px;
   background-color: rgba(100, 100, 100, 0.2);
 }
