--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -14,7 +14,9 @@ html, body {
 }
 
 #page-header {
-  margin: 30px;
+  width: 1000px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   font-size: 4em;
   text-align: center;
 }
@@ -26,6 +28,7 @@ html, body {
 }
 
 h2 {
+  width: 1000px;
   margin-top: 2em;
   margin-bottom: .5em;
 }
