[FAQ] Style cleanups

--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -46,11 +46,11 @@ a:active { color: #FFF; }
 a:visited { color: #AFA; }
 a:visited:hover { color: #EFE; }
 
-.lightContent a:link { color: #B55; }
-.lightContent a:hover { color: #C77; }
-.lightContent a:active { color: #555; }
-.lightContent a:visited { color: #6A6; }
-.lightContent a:visited:hover { color: #7C7; }
+.lightContent a:link { color: #A22; }
+.lightContent a:hover { color: #944; }
+.lightContent a:active { color: #222; }
+.lightContent a:visited { color: #393; }
+.lightContent a:visited:hover { color: #494; }
 
 .graph {
   width: 1000px;
@@ -132,7 +132,16 @@ a:visited:hover { color: #EFE; }
 .success { color: #9D9; }
 
 /*
- * Internal status page
+ * FAQ
+ */
+body.faqPage {
+  padding: 0 100px 0 100px;
+}
+
+.faqPage h1 { text-align: center; }
+
+/*
+ * Status page (/status/)
  */
 
 .statusPage {
