--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -152,6 +152,21 @@ body.faqPage {
   padding: 0 100px 0 100px;
 }
 
+.faqPage .toc>ul {
+  margin: 0 0 0 1em;
+  padding: 0;
+}
+.faqPage .toc {
+  float: right;
+  padding: 1em;
+  margin: 1em;
+  width: 30em;
+  border: 1px dashed #CCC;
+}
+
+/* Hide deeper than two levels by default */
+.faqPage .toc ul>li>ul>li>ul { display: none; }
+
 .faqPage h1 { text-align: center; }
 
 /*
