[html] Specify tooltip width in em, make wide enough for pushlog link on combined points

--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -292,7 +292,7 @@ body.faqPage {
   line-height: 1.4em;
   text-align: left;
   position: absolute;
-  width: 350px;
+  width: 25em;
   pointer-events: none;
   overflow: hidden;
 }
