--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -154,10 +154,12 @@ a:visited:hover { color: #494; }
 }
 
 .buildListSubHead {
-    color: #AAA;
+    color: #999;
     font-size: 0.8em;
-    text-style: italic;
+    font-style: italic;
 }
+
+.buildListHead .small { font-size: 0.8em; }
 
 .buildListContent {
     display: inline-block;
