[html/status] Grey out labels as well when disabling checkboxes
Fixes #22

--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -296,6 +296,10 @@ body.faqPage {
   margin-top: 2em;
 }
 
+.statusPage .disabled {
+  color: grey;
+}
+
 .statusPage #requestBuilds input {
   margin: 5px;
 }
