--- a/html/slimyet.css
+++ b/html/slimyet.css
@@ -53,6 +53,19 @@ html, body {
   text-shadow: none;
 }
 
+#goodnight-sweet-prince {
+  /*width: 400px;
+  height: 20px;*/
+  border: 2px solid #000;
+  margin: 0 auto 15px;
+  text-align: center;
+  padding: 20px;
+  font-weight: bold;
+  border-radius: 10px;
+  background-color: #FFF484;
+  border-color: #DCC600;
+}
+
 #dlProgress {
   position: absolute;
   left: 0;
